--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     // Functions to spawn game objects.
     function spawnCluster() {
-      const count = Math.floor(Math.random() * (8 - 3 + 1)) + 3;
+      const count = Math.floor(Math.random() * (8 - 3 + 1)) + 3 + getBlobSpeedMultiplier();
       const clusterCenterX = Math.random() * (canvas.width - 100) + 50;
       const spread = 50;
       for (let i = 0; i < count; i++) {
@@ -108,9 +108,9 @@
     function spawnRandomBox(isInitial = false) {
       const rand = Math.random();
       let type;
-      if(rand < 0.1) {
+      if(rand < 0.01) {
         type = "bullet";
-      } else if(rand < 0.4) {
+      } else if(rand < 0.1) {
         type = "spray";
       } else {
         type = "rapid";
@@ -134,8 +134,8 @@
         radius: bossRadius,
         speed: 1,
         color: 'red',
-        health: 500 + blobLevel * 20,
-        maxHealth: health,
+        health: 500 + getBlobSpeedMultiplier() * 20,
+        maxHealth: 500 + getBlobSpeedMultiplier() * 20,
         isBoss: true
       };
     }
@@ -394,7 +394,7 @@
               boss = null;
               permanentRapidLevel = 1;
               permanentSprayLevel = 1;
-              permanentBulletLevel = permanentBulletLevel > 4 ? 1 : 0;
+              permanentBulletLevel = permanentBulletLevel > 2 ? 1 : 0;
               bombCount = bombCount >= 3 ? bombCount + 1 : (bombCount === 2 ? bombCount + 2 : 3);
             }
             break;
